<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".FragmentHome">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:paddingTop="@dimen/padding_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleGravity="bottom|center_horizontal"
            app:expandedTitleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded"
            app:layout_scrollFlags="scroll|snap|enterAlways">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_parent">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="@dimen/photo_size"
                    android:layout_height="@dimen/photo_size"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_profile_pic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/padding_parent_small"
                    android:layout_marginEnd="@dimen/padding_parent_small"
                    android:layout_toStartOf="@id/notification"
                    android:layout_toEndOf="@id/photo"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/good_morning"
                        android:textColor="@color/textSecondary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_4dp"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/notification"
                    android:layout_width="@dimen/photo_size_extra_small"
                    android:layout_height="@dimen/photo_size_extra_small"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/margin_5dp"
                    android:src="@drawable/icons8_notification" />
            </RelativeLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="parallax" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rounded_small"
        android:fillViewport="true"
        android:paddingBottom="?actionBarSize"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search"
                style="@style/tilStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_parent"
                android:hint="@string/find_internship"
                app:layout_constraintEnd_toStartOf="@id/filter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/filter"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_margin="@dimen/padding_parent"
                android:background="@drawable/bg_rounded_small"
                android:backgroundTint="@color/primary"
                android:padding="@dimen/margin_5dp"
                android:src="@drawable/icons8_slider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:paddingStart="@dimen/padding_parent"
                android:paddingEnd="@dimen/padding_parent"
                android:src="@drawable/ic_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search" />

            <TextView
                android:id="@+id/activelyHiringText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4dp"
                android:padding="@dimen/padding_parent"
                android:text="@string/actively_hiring"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headerImage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_parent"
                android:text="@string/see_all"
                android:textColor="@color/green"
                android:textSize="@dimen/text_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headerImage" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:id="@+id/activelyHiring"
                android:paddingStart="@dimen/padding_parent"
                android:paddingEnd="@dimen/padding_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activelyHiringText" />


            <TextView
                android:id="@+id/newInternshipText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4dp"
                android:padding="@dimen/padding_parent"
                android:text="@string/new_internship"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activelyHiring" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_parent"
                android:text="@string/see_all"
                android:textColor="@color/green"
                android:textSize="@dimen/text_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activelyHiring" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newInternship"
                android:clipToPadding="false"
                android:paddingStart="@dimen/padding_parent"
                android:paddingEnd="@dimen/padding_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/newInternshipText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>